--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,8 +6,6 @@
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
-<!--Не уверена, что правильно поняла 8 задание. Сделала выбор пользователя при переходе по ссылке Users-->
-
 <form method="post" action="users">
     <p><select size="3" id="user" name="user">
         <option disabled>Select user</option>
@@ -16,5 +14,6 @@
     </select></p>
     <button type="submit">Login</button>
 </form>
+<h3><a href="users">Users</a></h3>
 </body>
 </html>
